charts/jellyfin/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: media
  labels:
    kubernetes.io/metadata.name: media
